--- a/README.adoc
+++ b/README.adoc
@@ -57,10 +57,10 @@ Projet est réalisé par::
 - https://github.com/ElPoraz[Pablo Marquet]
 - https://github.com/titouangauze[Titouan Gauze]
 
-Tuteur/tutrice enseignant(e) de l'équipe:: mailto:jean-michel.bruel@univ-tlse2.fr[JMB]
-                                           andre.peninou@univ-tlse2.fr[AP]
-                                           mailto:esther.pandaries@univ-tlse2.fr[EP]
-                                           mailto:laurent.nonne@univ-tlse2.fr[LN]
+Tuteur/tutrice enseignant(e) de l'équipe:: mailto:jean-michel.bruel@univ-tlse2.fr[JMB] +
+                                           mailto:andre.peninou@univ-tlse2.fr[AP] +
+                                           mailto:esther.pandaries@univ-tlse2.fr[EP] +
+                                           mailto:laurent.nonne@univ-tlse2.fr[LN] +
                                            mailto:patricia.stolf@univ-tlse2.fr[PS]
 
 == Contexte général
