--- a/Documentation/document_conception.adoc
+++ b/Documentation/document_conception.adoc
@@ -17,60 +17,7 @@ Ce document de conception détaille les éléments clés du projet de site e-com
 
 Ce diagramme présente les interactions entre les différents types d’utilisateurs et les fonctionnalités principales de l'application.
 
-[plantuml]
-----
-@startuml
-left to right direction
-actor "Client Visiteur" as Visitor
-actor "Client avec Compte" as Client
-actor "Employé" as Employee
-actor "Administrateur" as Admin
-
-(Parcourir le Catalogue) as BrowseCatalogue
-(Rechercher un Produit) as SearchProduct
-(Consulter les Détails d'un Produit) as ViewProduct
-(Créer un Compte) as CreateAccount
-(Consulter les Promotions) as ViewPromotions
-
-(Ajouter un Produit au Panier) as AddToCart
-(Gérer le Panier) as ManageCart
-(Passer une Commande) as PlaceOrder
-(Consulter l’Historique des Commandes) as ViewHistory
-(Écrire un Avis) as WriteReview
-(Voir les Suggestions de Produits) as ViewSuggestions
-
-(Activer/Désactiver les Promotions) as ManagePromotions
-(Répondre aux Avis des Clients) as ReplyReviews
-(Voir et Gérer les Avis) as ManageReviews
-
-(Gérer le Catalogue) as ManageCatalogue
-(Gérer les Utilisateurs) as ManageUsers
-(Gérer les Promotions) as EditPromotions
-(Créer des Catégories de Produits) as CreateCategories
-
-Visitor --> BrowseCatalogue
-Visitor --> SearchProduct
-Visitor --> ViewProduct
-Visitor --> CreateAccount
-Visitor --> ViewPromotions
-
-Client --> AddToCart
-Client --> ManageCart
-Client --> PlaceOrder
-Client --> ViewHistory
-Client --> WriteReview
-Client --> ViewSuggestions
-
-Employee --> ManagePromotions
-Employee --> ReplyReviews
-Employee --> ManageReviews
-
-Admin --> ManageCatalogue
-Admin --> ManageUsers
-Admin --> EditPromotions
-Admin --> CreateCategories
-@enduml
-----
+image::Documentation/images/UC.png[UC, 50%]
 
 === Description des cas d'utilisation principaux
 
@@ -144,215 +91,19 @@ Admin --> CreateCategories
 
 Ce diagramme de séquence illustre le processus pour un client de passer une commande à partir de son panier, avec vérification de l'adresse de livraison, calcul du montant total, et confirmation du paiement.
 
-[plantuml]
-----
-@startuml
-actor Client
-participant "Panier" as Panier
-participant "Commande" as Commande
-participant "Paiement" as Paiement
-participant "Système" as Systeme
-
-Client -> Panier: vérifierContenuPanier()
-Panier --> Client: contenu confirmé
-
-Client -> Systeme: sélectionnerAdresseLivraison()
-Systeme --> Client: confirmation de l'adresse
-
-Client -> Commande: passerCommande()
-Commande -> Panier: obtenirProduits()
-Panier --> Commande: liste des produits
-
-Commande -> Systeme: calculerMontantTotal()
-Systeme --> Commande: montant total
-
-Commande -> Paiement: effectuerPaiement(montant)
-Paiement --> Commande: confirmation de paiement
-
-Commande -> Systeme: mettreAJourEtat("En cours de traitement")
-Systeme --> Commande: état mis à jour
-
-Commande -> Client: confirmerCommande()
-Systeme -> Client: envoyerConfirmationEmail()
-@enduml
-----
+image::Documentation/images/DS_AjoutPanier.png[DS_AjoutPanier, 50%]
 
 ==== Diagramme de Séquence : Ajouter un Produit au Panier
 
 Ce diagramme de séquence montre l'interaction entre le client, le produit, le panier, et le système lorsqu'un client ajoute un produit à son panier. Le système vérifie la disponibilité du stock avant de confirmer l'ajout.
 
-[plantuml]
-----
-@startuml
-actor Client
-participant "Produit" as Produit
-participant "Panier" as Panier
-participant "Système" as Systeme
-
-Client -> Produit: consulterDétails()
-Produit --> Client: afficherDétailsProduit
-
-Client -> Panier: ajouterProduit(produit, quantité)
-Panier -> Systeme: vérifierStock(produit, quantité)
-Systeme --> Panier: stock suffisant?
-
-alt stock suffisant
-    Panier -> Client: produit ajouté avec succès
-else stock insuffisant
-    Panier -> Client: message d'erreur (stock insuffisant)
-end
-@enduml
-----
+image::Documentation/images/DS_Commande.png[DS_Commande, 50%]
 
 == Diagramme de Classe Métier
 
 Le diagramme de classe métier ci-dessous illustre les principales entités de l'application e-commerce ainsi que leurs relations. Chaque classe représente une entité du système, et leurs attributs et méthodes reflètent les opérations essentielles pour le fonctionnement de la plateforme.
 
-[plantuml]
-----
-@startuml
-class Client {
-    - id: int
-    - nom: String
-    - email: String
-    - motDePasse: String
-    - telephone: String
-    - historiqueCommandes: List<Commande>
-    + creerCompte(email: String, motDePasse: String): bool
-    + seConnecter(email: String, motDePasse: String): bool
-    + ajouterProduitAuPanier(produit: Produit, quantite: int)
-    + passerCommande(): Commande
-}
-
-class Produit {
-    - id: int
-    - nom: String
-    - description: String
-    - prix: float
-    - imageURL: String
-    + consulterDetails(): void
-    + mettreAJourStock(nouveauStock: int): void
-}
-
-class Panier {
-    - id: int
-    - produits: Map<Produit, int>   // produit -> quantité
-    + ajouterProduit(produit: Produit, quantite: int): void
-    + retirerProduit(produit: Produit): void
-    + calculerTotal(): float
-    + viderPanier(): void
-}
-
-class Commande {
-    - id: int
-    - date: Date
-    - montant: float
-    - etat: String
-    - produits: Map<Produit, int>   // produit -> quantité
-    - adresseLivraison: Adresse
-    + passerCommande(): void
-    + annulerCommande(): void
-    + mettreAJourEtat(nouvelEtat: String): void
-}
-
-class Adresse {
-    - id: int
-    - rue: String
-    - ville: String
-    - codePostal: String
-    - pays: String
-    - typeAdresse: String  // ex: "Facturation", "Livraison"
-}
-
-class Avis {
-    - id: int
-    - note: int
-    - commentaire: String
-    - date: Date
-    - client: Client
-    + ajouterAvis(note: int, commentaire: String): void
-    + modifierAvis(nouvelleNote: int, nouveauCommentaire: String): void
-}
-
-class Promotion {
-    - id: int
-    - description: String
-    - dateDebut: Date
-    - dateFin: Date
-    - reductionPourcentage: float
-    + appliquerReduction(produit: Produit): float
-    + estValide(): bool
-}
-
-class Employe {
-    - id: int
-    - nom: String
-    - role: String
-    + activerPromotion(promotion: Promotion): void
-    + desactiverPromotion(promotion: Promotion): void
-    + repondreAvis(avis: Avis, reponse: String): void
-}
-
-class Administrateur {
-    - id: int
-    - nom: String
-    + ajouterProduit(produit: Produit): void
-    + supprimerProduit(produit: Produit): void
-    + gererEmployes(employe: Employe, action: String): void
-    + creerPromotion(description: String, reduction: float, dateDebut: Date, dateFin: Date): Promotion
-}
-
-class Paiement {
-    - id: int
-    - montant: float
-    - type: String  // ex: "Carte Bancaire", "PayPal"
-    - statut: String
-    - datePaiement: Date
-    + effectuerPaiement(): bool
-    + annulerPaiement(): void
-}
-
-class Categorie {
-    - id: int
-    - nom: String
-    - sousCategories: List<Categorie>
-    + ajouterSousCategorie(categorie: Categorie): void
-    + getCategories(): List<Categorie>
-}
-
-class Stock {
-    - id: int
-    - quantite: int
-    - seuilAlerte: int
-    + verifierStock(): bool
-    + genererAlerteSiFaibleStock(): void
-}
-
-class HistoriqueAction {
-    - id: int
-    - dateAction: Date
-    - typeAction: String
-    - description: String
-}
-
-Client "1" -- "1" Panier
-Client "1" -- "0..*" Commande
-Client "1" -- "0..*" Avis
-Client "1" -- "1..*" Adresse
-
-Produit "1" -- "0..*" Avis
-Produit "1" -- "1" Stock
-Produit "0..*" -- "1" Categorie
-Commande "1" -- "1" Paiement
-Commande "1" -- "1..*" Produit
-Employe "1" -- "0..*" Promotion
-Employe "1" -- "0..*" HistoriqueAction
-Administrateur "1" -- "0..*" Employe
-Administrateur "1" -- "0..*" Produit
-Administrateur "1" -- "0..*" HistoriqueAction
-Promotion "0..*" -- "0..*" Produit
-@enduml
-----
+image::Documentation/images/DC_Métier.png[DC_Métier, 50%]
 
 === Description des principales classes métiers
 
