--- a/Documentation/document_conception.adoc
+++ b/Documentation/document_conception.adoc
@@ -17,7 +17,7 @@ Ce document de conception détaille les éléments clés du projet de site e-com
 
 Ce diagramme présente les interactions entre les différents types d’utilisateurs et les fonctionnalités principales de l'application.
 
-image::Documentation/images/UC.png[UC, 50%]
+image::/images/UC.png[UC, 50%]
 
 === Description des cas d'utilisation principaux
 
@@ -91,19 +91,19 @@ image::Documentation/images/UC.png[UC, 50%]
 
 Ce diagramme de séquence illustre le processus pour un client de passer une commande à partir de son panier, avec vérification de l'adresse de livraison, calcul du montant total, et confirmation du paiement.
 
-image::Documentation/images/DS_AjoutPanier.png[DS_AjoutPanier, 50%]
+image::/images/DS_AjoutPanier.png[DS_AjoutPanier, 50%]
 
 ==== Diagramme de Séquence : Ajouter un Produit au Panier
 
 Ce diagramme de séquence montre l'interaction entre le client, le produit, le panier, et le système lorsqu'un client ajoute un produit à son panier. Le système vérifie la disponibilité du stock avant de confirmer l'ajout.
 
-image::Documentation/images/DS_Commande.png[DS_Commande, 50%]
+image::/images/DS_Commande.png[DS_Commande, 50%]
 
 == Diagramme de Classe Métier
 
 Le diagramme de classe métier ci-dessous illustre les principales entités de l'application e-commerce ainsi que leurs relations. Chaque classe représente une entité du système, et leurs attributs et méthodes reflètent les opérations essentielles pour le fonctionnement de la plateforme.
 
-image::Documentation/images/DC_Métier.png[DC_Métier, 50%]
+image::/images/DC_Métier.png[DC_Métier, 50%]
 
 === Description des principales classes métiers
 
